:sparkles::iphone: improve ordering on mobile devices

--- a/scss/components/challenge/_ordering.scss
+++ b/scss/components/challenge/_ordering.scss
@@ -33,12 +33,13 @@
         flex-direction: column;
         gap: 0;
         position: relative;
-    }
-
-    &__elements-list {
-        display: flex;
-        flex-direction: column;
-        gap: spacing("md");
+        touch-action: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     &__element {
@@ -50,11 +51,17 @@
             )
         );
         cursor: move;
-        user-select: none;
         transition: all 0.3s ease;
         margin: 0;
         position: relative;
         z-index: 1;
+        touch-action: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
 
         &:hover {
             transform: translateY(-2px);
@@ -67,10 +74,24 @@
             transform: scale(0.98);
             background-color: lighten-color("primary", 1.9);
             @include card-shadow("hard");
+            z-index: z-index("modal");
+            cursor: grabbing;
+        }
+
+        &:not(&--dragging) {
+            cursor: grab;
         }
 
         &--over {
             border: 2px dashed color("primary");
+        }
+
+        @media (hover: none) {
+            &:active {
+                transform: scale(0.98);
+                background-color: lighten-color("primary", 1.9);
+                @include card-shadow("hard");
+            }
         }
     }
 
@@ -111,6 +132,15 @@
                 transform: translate(-50%, -50%);
             }
         }
+
+        @media (hover: none) {
+            height: spacing("md");
+            background-color: lighten-color("primary", 1.1);
+
+            &--active {
+                background-color: lighten-color("success", 1.3);
+            }
+        }
     }
 
     @include responsive-layout("small") {
@@ -120,8 +150,9 @@
             @include material-h5;
         }
 
-        &__elements {
+        &__element {
             padding: spacing("md");
+            min-height: spacing("xl");
         }
 
         &__element {
