:sparkles: adds solana wallet

--- a/scss/components/marketplace/_index.scss
+++ b/scss/components/marketplace/_index.scss
@@ -2,3 +2,6 @@
 @import "product";
 @import "product-catalog";
 @import "shopping-cart";
+@import "token";
+@import "token_selector";
+@import "wallet";
