:sparkles: adds domain selector

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -5,6 +5,7 @@
 @import "certificates";
 @import "challenge";
 @import "chat";
+@import "domain_selector";
 @import "feedback-popup";
 @import "gdrive-backup";
 @import "logo";
