:sparkles::page_facing_up: adds app dependencies component

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,5 +1,6 @@
 @import "advertisement";
 @import "app-version";
+@import "app-dependencies";
 @import "badge";
 @import "buy_me_coffee";
 @import "certificates";
