--- a/scss/atoms/_badge.scss
+++ b/scss/atoms/_badge.scss
@@ -13,69 +13,64 @@ $badge-configs: (
     ),
 );
 
-@mixin badge-base($config: ()) {
+@mixin badge($config: ()) {
     $default-config: (
-        padding: "sm",
-        radius: "sm",
+        size: "md",
+        circular: false,
+        counter: false,
         theme: "primary",
         text: "light",
         shadow: "soft",
+        padding: "sm",
+        radius: "sm",
+        counter-theme: "danger",
     );
     $config: map-merge($default-config, $config);
 
     display: inline-flex;
     align-items: center;
-    padding: spacing(map.get($config, padding));
-    border-radius: border-radius(map.get($config, radius));
+    justify-content: center;
+
+    $badge-size: map.get($badge-configs, "size", map.get($config, size));
+    $counter-size: map.get($badge-configs, "counter", map.get($config, size));
+
+    @if map.get($config, circular) {
+        width: $badge-size;
+        height: $badge-size;
+        border-radius: border-radius("full");
+        padding: 0;
+    } @else if map.get($config, counter) {
+        min-width: $counter-size;
+        height: $counter-size;
+        border-radius: $counter-size;
+        background-color: color(map.get($config, counter-theme));
+        color: color(map.get($config, text));
+        font-size: font-size("300");
+        font-weight: font-weight("bold");
+    } @else {
+        padding: spacing(map.get($config, padding));
+        border-radius: border-radius(map.get($config, radius));
+    }
     background-color: color(map.get($config, theme));
     color: color(map.get($config, text));
     @include card-shadow(map.get($config, shadow));
 }
 
 @mixin badge-circular($size: "md", $config: ()) {
-    $default-config: (
-        shadow: "default",
-        theme: "primary",
-        text: "light",
-        radius: "full",
-        padding: "none",
+    $circular-config: (
+        circular: true,
+        size: $size,
     );
-    $config: map-merge($default-config, $config);
-
-    @include badge-base($config);
-
-    $badge-size: map.get($badge-configs, "size", $size);
-    width: $badge-size;
-    height: $badge-size;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
+    @include badge(map-merge($circular-config, $config));
 }
 
 @mixin badge-counter($size: "sm", $config: ()) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    $default-config: (
-        theme: "danger",
-        text: "light",
-        shadow: "soft",
+    $counter-config: (
+        counter: true,
+        size: $size,
+        counter-theme: "danger",
     );
-    $config: map-merge($default-config, $config);
-
-    $counter-size: map.get($badge-configs, "counter", $size);
-
-    min-width: $counter-size;
-    height: $counter-size;
-    background-color: color(map.get($config, theme));
-    color: color(map.get($config, text));
-    font-size: font-size("300");
-    font-weight: font-weight("bold");
-    border-radius: $counter-size;
-    @include card-shadow(map.get($config, shadow));
+    @include badge(map-merge($counter-config, $config));
 }
 
 @mixin badge-tooltip {
