--- a/scss/components/analytics/_average-time-taken.scss
+++ b/scss/components/analytics/_average-time-taken.scss
@@ -1,5 +1,4 @@
 .average-time-taken {
-    // Block styles
     & {
         @include card(
             (
@@ -9,7 +8,6 @@
         );
     }
 
-    // Element styles
     &__header {
         @include horizontal-layout(
             (
@@ -21,13 +19,11 @@
     }
 
     &__title {
-        //  Using a mixin defined in _type.scss
         @include material-h3;
         margin: 0;
     }
 
     &__trend {
-        // Uses styles from success rate component
         display: flex;
         align-items: center;
         gap: 0.5rem;
@@ -38,25 +34,17 @@
     }
 
     &__trend-icon {
-        // Icon styles (assuming Font Awesome or similar)
         &.fa-arrow-up {
-            // Example:  Icon for improving trend
             color: color("success");
         }
 
         &.fa-arrow-down {
-            // Example: Icon for declining trend
             color: color("danger");
         }
 
         &.fa-arrows-left-right {
-            // Example: Icon for stable trend
             color: color("info");
         }
-    }
-
-    &__trend-label {
-        // Trend label styling
     }
 
     &__content {
@@ -68,20 +56,17 @@
     }
 
     &__value {
-        // Style for the value display
-        font-size: font-size("4xl"); // Example
+        font-size: font-size("4xl");
         font-weight: font-weight("bold");
         color: color("text-primary");
     }
 
     &__description {
-        // Style for the description text
         font-size: font-size("md");
         color: color("text-secondary");
-        margin: 0; // Remove default margin
+        margin: 0;
     }
 
-    // Modifier styles (for trend, etc.)
     &__trend--improving {
         background-color: color("success");
         color: color("light");
