:rotating_light::lipstick: linted styles

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -10,6 +10,7 @@ $colors: (
     "quarterary": theme-color("quarterary-color"),
     "text-primary": theme-color("text-primary"),
     "text-secondary": theme-color("text-secondary"),
+    "text-disabled": theme-color("text-disabled"),
     "background-primary": theme-color("background-primary"),
     "background-secondary": theme-color("background-secondary"),
     "gray-100": theme-color("gray-100"),
@@ -49,6 +50,7 @@ $fallback-colors: (
     "quarterary": #808080,
     "text-primary": #262626,
     "text-secondary": #595959,
+    "text-disabled": #999999,
     "background-primary": #f5f5f5,
     "background-secondary": #ffffff,
     "gray-100": #f8f9fa,
