--- a/scss/components/marketplace/_token.scss
+++ b/scss/components/marketplace/_token.scss
@@ -30,7 +30,7 @@
 
         &.selected {
             border-color: color("primary");
-            background-color: color("primary-light");
+            background-color: color("background-primary");
         }
     }
 }
