:lipstick: adds quarternary color

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -7,7 +7,7 @@ $colors: (
     "primary": theme-color("primary-color"),
     "secondary": theme-color("secondary-color"),
     "tertiary": theme-color("tertiary-color"),
-    "quarterary": theme-color("quarterary-color"),
+    "quarternary": theme-color("quarternary-color"),
     "text-primary": theme-color("text-primary"),
     "text-secondary": theme-color("text-secondary"),
     "text-disabled": theme-color("text-disabled"),
@@ -47,7 +47,7 @@ $fallback-colors: (
     "primary": #ffa500,
     "secondary": #9932cc,
     "tertiary": #a0a0a0,
-    "quarterary": #808080,
+    "quarternary": #808080,
     "text-primary": #262626,
     "text-secondary": #595959,
     "text-disabled": #999999,
