--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -5,6 +5,7 @@
     --primary-color: #ff8c00;
     --secondary-color: #8a2be2;
     --tertiary-color: #808080;
+    --quarternary-color: #808080;
     --gray-100: #f8f9fa;
     --gray-200: #e9ecef;
     --gray-300: #dee2e6;
