--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -5,6 +5,7 @@
     --primary-color: #ffa500;
     --secondary-color: #9932cc;
     --tertiary-color: #a0a0a0;
+    --quarternary-color: #808080;
     --gray-100: #212529;
     --gray-200: #343a40;
     --gray-300: #495057;
