--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
