--- a/styles/components/buy_me_coffee.css
+++ b/styles/components/buy_me_coffee.css
@@ -4,11 +4,11 @@
     }
 
     & img {
-        @apply block w-full h-auto transition-transform duration-300 ease-in-out;
+        @apply block max-w-full h-auto transition-transform duration-300 ease-in-out;
     }
 
     &:hover {
-        @apply -translate-y-0.5;
+        @apply transform translate-y-[-2px];
 
         & img {
             @apply scale-105;
@@ -16,9 +16,10 @@
     }
 }
 
-@screen sm {
+/* For small screens */
+@media (max-width: 640px) {
     .buy-me-coffee {
-        @apply bottom-6 right-6;
+        @apply bottom-6 right-6 absolute;
 
         & img {
             @apply max-w-[180px];
