:sparkles::lipstick: designs video, swipe, social links, share page, rating stars, progress, profile points, profile config, logo and leaderboard

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -1,3 +1,13 @@
 @import "buy_me_coffee.css";
+@import "leaderboard.css";
+@import "logo.css";
+@import "profile_config.css";
+@import "profile_points.css";
+@import "progress.css";
+@import "rating_stars.css";
+@import "share_page.css";
+@import "social_links.css";
+@import "swipe.css";
 @import "timer.css";
 @import "tour/index.css";
+@import "video.css";
