:sparkles::lipstick: created styles for feedback popup, domain selector, chat, badge, app version, app dependencies and advertisement

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -1,4 +1,10 @@
+@import "advertisement.css";
+@import "app_dependencies.css";
+@import "app_version.css";
 @import "buy_me_coffee.css";
+@import "domain_selector.css";
+@import "feedback_popup.css";
+@import "gdrive_backup.css";
 @import "leaderboard.css";
 @import "logo.css";
 @import "profile_config.css";
