--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -7,10 +7,12 @@
 @import "gdrive_backup.css";
 @import "leaderboard.css";
 @import "logo.css";
+@import "navigation.css";
 @import "profile_config.css";
 @import "profile_points.css";
 @import "progress.css";
 @import "rating_stars.css";
+@import "settings/index.css";
 @import "share_page.css";
 @import "social_links.css";
 @import "swipe.css";
