--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -7,6 +7,7 @@
 @import "gdrive_backup.css";
 @import "leaderboard.css";
 @import "logo.css";
+@import "marketplace/index.css";
 @import "navigation.css";
 @import "profile_config.css";
 @import "profile_points.css";
