--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -1,7 +1,9 @@
 @import "advertisement.css";
+@import "analytics/index.css";
 @import "app_dependencies.css";
 @import "app_version.css";
 @import "buy_me_coffee.css";
+@import "certificates/index.css";
 @import "domain_selector.css";
 @import "feedback_popup.css";
 @import "gdrive_backup.css";
