:sparkles::lipstick: created styles for challenges

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -3,6 +3,7 @@
 @import "app_dependencies.css";
 @import "app_version.css";
 @import "buy_me_coffee.css";
+@import "challenge/index.css";
 @import "certificates/index.css";
 @import "domain_selector.css";
 @import "feedback_popup.css";
