:sparkles::lipstick: adds buttons css

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -2,6 +2,7 @@
 @import "analytics/index.css";
 @import "app_dependencies.css";
 @import "app_version.css";
+@import "badge.css";
 @import "buy_me_coffee.css";
 @import "challenge/index.css";
 @import "certificates/index.css";
