--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 @import "tailwind.css";
 
 @import "atoms/index.css";
+@import "base/index.css";
 @import "components/index.css";
 @import "vendors/index.css";
