--- a/styles/components/certificates/index.css
+++ b/styles/components/certificates/index.css
@@ -1,4 +1,4 @@
-@import "achievement.css";
-@import "achievements.css";
-@import "certificate.css";
-@import "certificate_image.css";
+@import "./achievement.css";
+@import "./achievements.css";
+@import "./certificate.css";
+@import "./certificate_image.css";
