--- a/styles/components/challenge/index.css
+++ b/styles/components/challenge/index.css
@@ -1,18 +1,18 @@
-@import "actions.css";
-@import "config.css";
-@import "gap_fill.css";
-@import "gap_fill_result.css";
-@import "info.css";
-@import "informative.css";
-@import "informative_markdown.css";
-@import "multiple_choice.css";
-@import "multiple_choice_circle.css";
-@import "multiple_choice_result.css";
-@import "options.css";
-@import "ordering.css";
-@import "ordering_result.css";
-@import "placeholder.css";
-@import "question.css";
-@import "rating.css";
-@import "review.css";
-@import "sort_table.css";
+@import "./actions.css";
+@import "./config.css";
+@import "./gap_fill.css";
+@import "./gap_fill_result.css";
+@import "./info.css";
+@import "./informative.css";
+@import "./informative_markdown.css";
+@import "./multiple_choice.css";
+@import "./multiple_choice_circle.css";
+@import "./multiple_choice_result.css";
+@import "./options.css";
+@import "./ordering.css";
+@import "./ordering_result.css";
+@import "./placeholder.css";
+@import "./question.css";
+@import "./rating.css";
+@import "./review.css";
+@import "./sort_table.css";
