--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -1,26 +1,26 @@
-@import "advertisement.css";
-@import "analytics/index.css";
-@import "app_dependencies.css";
-@import "app_version.css";
-@import "badge.css";
-@import "buy_me_coffee.css";
-@import "challenge/index.css";
-@import "certificates/index.css";
-@import "domain_selector.css";
-@import "feedback_popup.css";
-@import "gdrive_backup.css";
-@import "leaderboard.css";
-@import "logo.css";
-@import "marketplace/index.css";
-@import "navigation.css";
-@import "profile_config.css";
-@import "profile_points.css";
-@import "progress.css";
-@import "rating_stars.css";
-@import "settings/index.css";
-@import "share_page.css";
-@import "social_links.css";
-@import "swipe.css";
-@import "timer.css";
-@import "tour/index.css";
-@import "video.css";
+@import "./advertisement.css";
+@import "./analytics/index.css";
+@import "./app_dependencies.css";
+@import "./app_version.css";
+@import "./badge.css";
+@import "./buy_me_coffee.css";
+@import "./challenge/index.css";
+@import "./certificates/index.css";
+@import "./domain_selector.css";
+@import "./feedback_popup.css";
+@import "./gdrive_backup.css";
+@import "./leaderboard.css";
+@import "./logo.css";
+@import "./marketplace/index.css";
+@import "./navigation.css";
+@import "./profile_config.css";
+@import "./profile_points.css";
+@import "./progress.css";
+@import "./rating_stars.css";
+@import "./settings/index.css";
+@import "./share_page.css";
+@import "./social_links.css";
+@import "./swipe.css";
+@import "./timer.css";
+@import "./tour/index.css";
+@import "./video.css";
