--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
-@import "tailwind.css";
+@import "./tailwind.css";
 
-@import "atoms/index.css";
-@import "base/index.css";
-@import "components/index.css";
-@import "vendors/index.css";
+@import "./atoms/index.css";
+@import "./base/index.css";
+@import "./components/index.css";
+@import "./vendors/index.css";
+@import "./themes/index.css";
