--- a/styles/components/settings/select_level.css
+++ b/styles/components/settings/select_level.css
@@ -2,7 +2,7 @@
     @apply relative m-2 flex justify-center;
 
     & select {
-        @apply select select-bordered text-xl;
+        @apply select text-xl;
         @apply appearance-none pr-10;
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
         background-position: right 0.5rem center;
