:lipstick: updates progress bar

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -15,7 +15,7 @@
 @import "./navigation.css";
 @import "./profile_config.css";
 @import "./profile_points.css";
-@import "./progress.css";
+@import "./progress_bar.css";
 @import "./rating_stars.css";
 @import "./settings/index.css";
 @import "./share_page.css";
