:lipstick: improved chat

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -4,6 +4,7 @@
 @import "./app_version.css";
 @import "./badge.css";
 @import "./buy_me_coffee.css";
+@import "./chat.css";
 @import "./challenge/index.css";
 @import "./certificates/index.css";
 @import "./domain_selector.css";
